# hutton

./: README.md  hie.yaml  hutton-sec-edition.cabal  hutton.cabal
src/Part1/Ch01/: Ch01.hs  Exercises.hs
src/Part1/Ch02/: Ch02.hs  Exercises.hs
src/Part1/Ch03/: Exercises.hs
src/Part1/Ch04/: Exercises.hs
src/Part1/Ch05/: Ch05.hs  Cipher.hs  Exercises.hs
src/Part1/Ch06/: Ch06.hs  Exercises.hs
src/Part1/Ch07/: Ch07.hs  Exercises.hs  Transmitter.hs  Voting.hs
src/Part1/Ch08/: Ch08.hs  Exercises.hs  Machine.hs  Tautology.hs
src/Part1/Ch09/: Countdown.hs  Exercises.hs  Main.hs
src/Part2/Ch10/: Exercises.hs  Hangman.hs  Nim.hs
src/Part2/Ch10/Life/: Life.hs  Main.hs
src/Part2/Ch11/: Main.hs  TicTacToe.hs
src/Part2/Ch12/: Exercises.hs  Monads.hs
src/Part2/Ch13/: Calculator.hs  Parsers.hs
src/Part2/Ch14/: Exercises.hs  Foldables.hs
src/Part2/Ch15/: Exercises.hs  Lazy.hs
src/Part2/Ch16/: Equational.hs  Exercises.hs
src/Part2/Ch17/: CalcComp.hs  Defunc.hs
test/: Tests.hs
