name:                hutton-sec-edition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hutton-sec-edition#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hutton-sec-edition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  ghc-options:         -Wall
  exposed-modules:     Part1.Ch01.Ch01
  build-depends:       base >= 4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
