name:                hutton
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hutton#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  exposed-modules:     Part1.Ch01.Ch01
                     , Part1.Ch02.Ch02
                     , Part1.Ch05.Ch05
                     , Part1.Ch05.Cipher
                     , Part1.Ch06.Ch06
                     , Part1.Ch07.Ch07
                     , Part1.Ch07.Voting
  build-depends:       base >= 4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest >= 0.16
  default-language:    Haskell2010
