name:                hutton
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hutton#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  exposed-modules:     Part1.Ch01.Ch01
                     , Part1.Ch01.Exercises
                     , Part1.Ch02.Ch02
                     , Part1.Ch02.Exercises
                     , Part1.Ch03.Exercises
                     , Part1.Ch04.Exercises
                     , Part1.Ch05.Ch05
                     , Part1.Ch05.Cipher
                     , Part1.Ch05.Exercises
                     , Part1.Ch06.Ch06
                     , Part1.Ch06.Exercises
                     , Part1.Ch07.Ch07
                     , Part1.Ch07.Voting
                     , Part1.Ch07.Transmitter
                     , Part1.Ch07.Exercises
                     , Part1.Ch08.Ch08
                     , Part1.Ch08.Machine
                     , Part1.Ch08.Tautology
                     , Part1.Ch08.Exercises
                     , Part1.Ch09.Exercises
                     , Part2.Ch10.Hangman
                     , Part2.Ch10.Nim
                     , Part2.Ch10.Exercises
                     , Part2.Ch12.Monads
                     , Part2.Ch12.Exercises
                     , Part2.Ch13.Parsers
                     , Part2.Ch13.Calculator
                     , Part2.Ch14.Foldables
                     , Part2.Ch15.Lazy
                     , Part2.Ch16.Equational
                     , Part2.Ch17.CalcComp
                     , Part2.Ch17.Defunc
  build-depends:       base >= 4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable countdown
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base >= 4.7 && <5
  other-modules:       Countdown
  default-language:    Haskell2010
  hs-source-dirs:      src/Part1/Ch09

executable life
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base >= 4.7 && <5
  other-modules:       Life
  default-language:    Haskell2010
  hs-source-dirs:      src/Part2/Ch10/Life

executable tictactoe
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base >= 4.7 && <5
  other-modules:       TicTacToe
  default-language:    Haskell2010
  hs-source-dirs:      src/Part2/Ch11

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && <5
                     , doctest >= 0.16
  default-language:    Haskell2010
